# Wiccapedia

./: .gitignore  AGENTS.md  README.md  WiccapediaGrimoire.sln  docker-compose.yml
WiccapediaApi/: Program.cs  WiccapediaApi.csproj  WiccapediaApi.http  appsettings.Development.json  appsettings.json
WiccapediaApi/Controllers/: CoversController.cs  DecorationsController.cs  LottieController.cs  NotebooksController.cs  TemplatesController.cs  UsersController.cs
WiccapediaApi/Data/: WiccapediaDbContext.cs
WiccapediaApi/Migrations/: 20251205034816_InitialCreate.Designer.cs  20251205034816_InitialCreate.cs  20260306030619_NotebookDomainRefactor.Designer.cs  20260306030619_NotebookDomainRefactor.cs  20260614051851_AllowNullablePageTitle.cs  (+6 more)
WiccapediaGrimoire/: Program.cs  WiccapediaGrimoire.csproj  _Imports.razor
WiccapediaOrchestrator/: AppHost.cs  WiccapediaOrchestrator.csproj
backend/: docker-compose.yml
backend/wiccapedia-api/: .gitignore  Cargo.toml
backend/wiccapedia-api/src/: main.rs
backend/wiccapedia-api/src/cache/: mod.rs  redis_cache.rs
backend/wiccapedia-api/src/config/: mod.rs
backend/wiccapedia-api/src/handlers/: gem_handlers.rs  health.rs
backend/wiccapedia-api/src/models/: filters.rs  gem.rs  mod.rs  pagination.rs
backend/wiccapedia-api/src/services/: file_image_provider.rs  gem_service_impl.rs  json_data_loader.rs  mod.rs  postgres_gem_service.rs
backend/wiccapedia-api/src/storage/: mod.rs
backend/wiccapedia-api/src/traits/: data_loader.rs  gem_service.rs  mod.rs
frontend/: index.html
init-scripts/: 01-create-app-user.sql
(+146 files in other folders)
